Update gradle and robolectric